Made the index.html file the Support URL.

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <title>Hidden Gems Support URL</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/6.5.0/firebase-app.js"></script>
@@ -32,11 +32,15 @@
   </head>
   <body>
     <div id="message">
-      <h2>Welcome to the Hidden Gems Hosting Site</h2>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+      <h2>Welcome to the Hidden Gems Support URL</h2>
+      <p>Here you can find contact information regarding the app if you have feedback, issues, or requests. Phone number and email are direct lines of communication with the creator of the app.</p>
+      <!-- <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a> -->
+      <h4>Phone Number</h4>
+      <p>(937)270-5527</p>
+      <h4>Email</h4>
+      <p>tr3umphant.designs@gmail.com</p>
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+    <!-- <p id="load">Firebase SDK Loading&hellip;</p> -->
 
     <script>
       document.addEventListener('DOMContentLoaded', function() {
@@ -50,14 +54,14 @@
         //
         // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
 
-        try {
-          let app = firebase.app();
-          let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-          document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-        }
+        // try {
+        //   let app = firebase.app();
+        //   let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
+        //   document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
+        // } catch (e) {
+        //   console.error(e);
+        //   document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
+        // }
       });
     </script>
   </body>
